# flask-iot-dashboard

./: .env.example  .gitignore  .replit  README.md  celery_worker.py  create_commit_history.py  docker-compose.yml  main.py  mosquitto.conf  pyproject.toml  pytest.ini  requirements.txt  run_ci_checks.py  sensor_simulator.py  start_services.py
.github/workflows/: ci.yml
attached_assets/: Pasted-Make-the-project-described-below-Make-the-project-very-advanced-and-thorough-and-fancy-the-way--1756053113214_1756053113214.txt
data/: readings.json  stats.json
src/dashboard/: __init__.py  file_storage.py  models.py  mqtt_client.py  realtime.py  tasks.py  views.py
src/dashboard/templates/: dashboard.html
src/tests/: conftest.py  test_models.py  test_mqtt_client.py  test_tasks.py  test_views.py
